Installed the FireStore Plugin

--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^4.2.1
+  cloud_firestore: ^6.1.1
 
 dev_dependencies:
   flutter_test:
