--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.1
+  firebase_auth: ^6.1.4
 
 dev_dependencies:
   flutter_test:
