--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.1
   firebase_auth: ^6.1.4
+  sign_in_button: ^4.0.1
 
 dev_dependencies:
   flutter_test:
