--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^4.2.1
+  firebase_auth: 6.1.4
   cloud_firestore: ^6.1.1
-  firebase_auth: ^6.1.4
   sign_in_button: ^4.0.1
 
 dev_dependencies:
