--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: 6.1.4
   cloud_firestore: ^6.1.1
   sign_in_button: ^4.0.1
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
